--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
                 <img class="football" src="img/football.png" alt=""/>
                 <img class="angry" src="img/angry_birds_42.png" alt=""/>
                 <div class="center_1">
-                    <p>2014.10 百度</p>
+                    <p>2014.10 空间家</p>
                     <hr/>
-                    <p>2015.06 腾讯</p>
+                    <p>2015.06 知乎</p>
                     <hr/>
-                    <p>2015.11 谷歌</p>
+                    <p>2015.11 新智泛能</p>
                     <hr/>
-                    <p>2016.03 facebook</p>
+                    <p>2016.03 前端学习</p>
                     <hr/>
-                    <p>2016.06 阿里巴巴</p>
+                    <p>未来：有梦想的小公司</p>
                     <hr/>
                 </div>
             </div>
