--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>姓名：王宗旭，是一位90后，2015年毕业于河北保定职业技术学院，曾就职于多家互联网公司的市场和销售部门，经常与技术人员交流，而后对技术产生兴趣，遂自学了js等语言，希望可以就职一家有梦想的小公司。</p>
+                <p>添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字</p>
             </div>
         </div>
         <div class="swiper-slide page3">
