--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字添加文字</p>
+                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定职业技术学院，由于热爱互联网，毕业后便进入了互联网公司，工作过程中对于其中的技术产生兴趣，遂自学了JS语言，未来想就业于一家有梦想的小公司，展现自己的才能</p>
             </div>
         </div>
         <div class="swiper-slide page3">
@@ -76,7 +76,7 @@
                 <div class="bg3">JS</div>
                 <div class="bg4">Node.js</div>
                 <div class="bg5">jQuery</div>
-                <div class="bg6">Swiper</div>
+                <div class="bg6">Ajax</div>
                 <img class="horse" src="img/horse.png" alt=""/>
             </div>
         </div>
