--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定职业技术学院，由于热爱互联网，毕业后便进入了互联网公司，工作过程中对于其中的技术产生兴趣，遂自学了JS语言，未来想就业于一家有梦想的小公司，展现自己的才能</p>
+                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定职业技术学院，由于热爱互联网，2014年实习期间学习了前端并进入技术外包公司，经过一年磨炼进入一家上市公司做前端开发工作</p>
             </div>
         </div>
         <div class="swiper-slide page3">
@@ -54,15 +54,15 @@
                 <img class="football" src="img/football.png" alt=""/>
                 <img class="angry" src="img/angry_birds_42.png" alt=""/>
                 <div class="center_1">
-                    <p>2014.10 空间家</p>
+                    <p>2014.10 技术外包公司</p>
                     <hr/>
-                    <p>2015.06 知乎</p>
+                    <p>---努力工作中----</p>
                     <hr/>
-                    <p>2015.11 新智泛能</p>
+                    <p>---努力工作中----</p>
                     <hr/>
-                    <p>2016.03 前端学习</p>
+                    <p>2015.06 空间家</p>
                     <hr/>
-                    <p>未来：有梦想的小公司</p>
+                    <p>未来：期待中···</p>
                     <hr/>
                 </div>
             </div>
