--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定职业技术学院，由于热爱互联网，2014年实习期间学习了前端并进入技术外包公司，经过一年磨炼进入一家上市公司做前端开发工作</p>
+                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定学院，由于热爱互联网，2014年实习期间学习了前端并进入技术外包工作室，经过磨炼进入一家上市公司做前端开发工作</p>
             </div>
         </div>
         <div class="swiper-slide page3">
@@ -54,15 +54,15 @@
                 <img class="football" src="img/football.png" alt=""/>
                 <img class="angry" src="img/angry_birds_42.png" alt=""/>
                 <div class="center_1">
-                    <p>2014.10 技术外包公司</p>
-                    <hr/>
-                    <p>---努力工作中----</p>
-                    <hr/>
-                    <p>---努力工作中----</p>
+                    <p>2014.10 网页工作室</p>
                     <hr/>
                     <p>2015.06 空间家</p>
                     <hr/>
-                    <p>未来：期待中···</p>
+                    <p>2016.09 乐视</p>
+                    <hr/>
+                    <p>···未来：我来···</p>
+                    <hr/>
+                    <p>···未来：我来···</p>
                     <hr/>
                 </div>
             </div>
@@ -73,10 +73,10 @@
                 <span></span>
                 <div class="bg1">CSS3</div>
                 <div class="bg2">HTML5</div>
-                <div class="bg3">JS</div>
-                <div class="bg4">Node.js</div>
+                <div class="bg3">原生Js</div>
+                <div class="bg4">NodeJs</div>
                 <div class="bg5">jQuery</div>
-                <div class="bg6">Ajax</div>
+                <div class="bg6">Vue.js</div>
                 <img class="horse" src="img/horse.png" alt=""/>
             </div>
         </div>
@@ -95,7 +95,7 @@
                     <p class="p1">wzx071000</p>
                     <p class="p2">13832256405</p>
                     <p class="p3">308929264@qq.com</p>
-                    <p class="p4">北京市昌平区回龙观</p>
+                    <p class="p4">北京市朝阳区立水桥</p>
                 </div>
             </div>
         </div>
