--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>姓名：王宗旭，出生于河北保定，2015年毕业于河北保定学院，由于热爱互联网，2014年实习期间学习了前端并进入技术外包工作室，经过磨炼进入一家上市公司做前端开发工作</p>
+                <p>姓名：王宗旭，出生于河北保定，热爱互联网，这只是个小demo，所以就不做过多介绍了，其他信息都在简历里，还可以点击
+                  <a style="color:#fff;text-decoration: underline;" href="https://wangzongxu.github.io">我的博客</a>
+                </p>
             </div>
         </div>
         <div class="swiper-slide page3">
@@ -58,11 +60,11 @@
                     <hr/>
                     <p>2015.06 空间家</p>
                     <hr/>
-                    <p>2016.09 乐视</p>
+                    <p>2016.09 乐视云计算</p>
                     <hr/>
-                    <p>···未来：我来···</p>
+                    <p>····至今····</p>
                     <hr/>
-                    <p>···未来：我来···</p>
+                    <p>····至今····</p>
                     <hr/>
                 </div>
             </div>
@@ -95,7 +97,7 @@
                     <p class="p1">wzx071000</p>
                     <p class="p2">13832256405</p>
                     <p class="p3">308929264@qq.com</p>
-                    <p class="p4">北京市朝阳区立水桥</p>
+                    <p class="p4">北京市朝阳区</p>
                 </div>
             </div>
         </div>
