--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="outer">
                 <div class="resume">
                     <p class="inner_1">我的简历</p>
-                    <p class="inner_2">王宗旭</p>
+                    <p class="inner_2">马邦德</p>
                 </div>
             </div>
         </div>
@@ -44,9 +44,7 @@
                 <img class="boy" src="img/little-boy-green.png" alt=""/>
                 <img class="butterfly" src="img/butterfly.png" alt=""/>
                 <hr/>
-                <p>姓名：王宗旭，出生于河北保定，热爱互联网，这只是个小demo，所以就不做过多介绍了，其他信息都在简历里，还可以点击
-                  <a style="color:#fff;text-decoration: underline;" href="https://wangzongxu.github.io">我的博客</a>
-                </p>
+                <p>姓名：马邦德，现任鹅城县长师爷，以斗黄四郎为首的奸商为乐，现寄身于张麻子账下，求一份安稳的工作，以养活妻儿老小。</p>
             </div>
         </div>
         <div class="swiper-slide page3">
@@ -56,15 +54,15 @@
                 <img class="football" src="img/football.png" alt=""/>
                 <img class="angry" src="img/angry_birds_42.png" alt=""/>
                 <div class="center_1">
-                    <p>2014.10 网页工作室</p>
+                    <p>2010.11 买康城县长一职</p>
                     <hr/>
-                    <p>2015.06 空间家</p>
+                    <p>2011.01 赴康城上任</p>
                     <hr/>
-                    <p>2016.09 乐视云计算</p>
+                    <p>2011.02 任鹅城师爷</p>
                     <hr/>
-                    <p>····至今····</p>
+                    <p>····忍耐····</p>
                     <hr/>
-                    <p>····至今····</p>
+                    <p>····忍耐····</p>
                     <hr/>
                 </div>
             </div>
@@ -73,12 +71,12 @@
             <div class="bigbox4">
                 <nav>我的技能</nav>
                 <span></span>
-                <div class="bg1">CSS3</div>
-                <div class="bg2">HTML5</div>
-                <div class="bg3">原生Js</div>
-                <div class="bg4">NodeJs</div>
-                <div class="bg5">jQuery</div>
-                <div class="bg6">Vue.js</div>
+                <div class="bg1">勾结</div>
+                <div class="bg2">拉拢</div>
+                <div class="bg3">靠山</div>
+                <div class="bg4">吃水</div>
+                <div class="bg5">私通</div>
+                <div class="bg6">贩卖</div>
                 <img class="horse" src="img/horse.png" alt=""/>
             </div>
         </div>
@@ -94,10 +92,10 @@
                     <img class="home" src="img/home.png" alt=""/>
                 </div>
                 <div class="page5R">
-                    <p class="p1">wzx071000</p>
-                    <p class="p2">13832256405</p>
-                    <p class="p3">308929264@qq.com</p>
-                    <p class="p4">北京市朝阳区</p>
+                    <p class="p1">bangdema</p>
+                    <p class="p2">138xxxx6405</p>
+                    <p class="p3">bangdema@goose.com</p>
+                    <p class="p4">中华民国鹅城县</p>
                 </div>
             </div>
         </div>
